Combatify 1.21.4 1.2.6 - The most painful update known to man