@@ -1,21 +1,25 @@
 package net.atlas.combatify.util.blocking.damage_parsers;
 
 import com.mojang.serialization.MapCodec;
-import net.atlas.combatify.critereon.CustomLootContextParamSets;
-import net.minecraft.world.item.enchantment.ConditionalEffect;
-import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 
-import java.util.Optional;
+import net.atlas.combatify.util.blocking.ComponentModifier.DataSet;
+import net.minecraft.advancements.critereon.TagPredicate;
+import net.minecraft.core.Holder;
+import net.minecraft.world.damagesource.DamageType;
 
-public record PercentageLimit(Optional<LootItemCondition> requirements) implements DamageParser {
-	public static final DamageParser ALL = new PercentageLimit(Optional.empty());
-	public static final MapCodec<PercentageLimit> CODEC = ConditionalEffect.conditionCodec(CustomLootContextParamSets.BLOCKED_DAMAGE).optionalFieldOf("requirements").xmap(PercentageLimit::new, PercentageLimit::requirements);
+import java.util.Collections;
+import java.util.List;
+
+public record PercentageLimit(List<TagPredicate<DamageType>> requirements, boolean enforceAll) implements DamageParser {
+	public static final DamageParser ALL = new PercentageLimit(Collections.emptyList(), true);
+	public static final MapCodec<PercentageLimit> CODEC = DamageParser.mapCodec(PercentageLimit::new);
 	@Override
-	public float parse(float originalValue, float protection, LootContext context) {
-		if (requirements.isPresent() && !requirements.get().test(context)) return 0;
-		float protectionFromPercentage = protection / 100F;
-		return Math.min(originalValue - ((originalValue + Math.clamp(2 * protection, 0, 1)) * (1 - protectionFromPercentage)), originalValue);
+	public float parse(float originalValue, DataSet protection, Holder<DamageType> damageType) {
+		if (!allAre(damageType)) return 0;
+
+		float subVal = originalValue - protection.addValue();
+		subVal = Math.max(subVal, 0);
+		return Math.min(protection.addValue() + Math.max(subVal - ((subVal + Math.clamp(2 * protection.multiplyValue(), 0, 1)) * (1 - protection.multiplyValue())), 0), originalValue);
 	}
 
 	@Override
